--- a/landing.html
+++ b/landing.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <nav class="bg-purple-800 text-white flex justify-between">
-        <img src="https://randomuser.me/api/portraits/men/75.jpg" alt="" srcset="" class="h-10 pt-3 px-3 rounded-2xl">
+        <span class="text-xl flex items-center mx-3 font-bold">PhoneMania</span>
         <ul class="px-28 py-4 flex space-x-3 justify-end">
             <li class="cursor-pointer">Home</li>
             <li class="cursor-pointer">About</li>
@@ -16,16 +16,19 @@
             <li class="cursor-pointer">Contact us</li>
         </ul>
     </nav>
-    <main>
-        <div class="main bg-fuchsia-100 py-40 pl-9">
+    <main class="bg-fuchsia-100 flex justify-around">
+        <div class="main  py-40 pl-9">
             <div class="text-6xl">
                 The Best Phone in the town
             </div>
            <p class="py-3 w-1/3">Lucknow is known for its rich cultural heritage, but when it comes to finding the best phone, it’s all about blending tradition with modern technology. In this vibrant city, you'll find a wide range of options, from high-end smartphones with cutting-edge features to budget-friendly models that don’t compromise on quality. </p>
             <div class="button my-2"> 
-                <button class="bg-purple-800 px-3 py-2 rounded-2xl text-white hover:text-slate-900 hover:bg-fuchsia-800 mx-2">Buy Now</button>
-                <button class="bg-purple-800 px-3 py-2 rounded-2xl text-white hover:text-slate-900 hover:bg-fuchsia-700 mx-2">Contact us</button>
+                <button class="bg-purple-800 px-3 py-2 rounded-2xl text-white hover:text-purple-900 hover:bg-white mx-2 border border-transparent hover:border-black">Buy Now</button>
+                <button class="bg-purple-800 px-3 py-2 rounded-2xl text-white hover:text-purple-900 hover:bg-white mx-2 border border-transparent hover:border-black     ">Contact us</button>
             </div>
+        </div>
+        <div class="flex items-center">
+            <img src="business-man-mobile-phone-clipart-md.png" alt="" >
         </div>
     </main>
 </body>
